--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup --config",
     "dev": "run-p dev:server dev:client",
-    "dev:client": "rollup -c -w",
+    "dev:client": "rollup --config --watch",
     "dev:server": "json-server --watch db.json --routes routes.json",
     "start": "sirv public --no-clear --single"
   },
